security: fix all DataArt penetration testing findings
Addresses all 6 security findings from the DataArt penetration testing report.

## Vulnerability Details

| Finding | Severity | Status | Description |
|---------|----------|--------|-------------|
| M1 | Medium | Fixed | Clickjacking protection via security headers |
| L1 | Low | Fixed | Restricted overly permissive RBAC roles |
| L2 | Low | Fixed | Hardened container security parameters |
| L3 | Low | Fixed | Added comprehensive security headers |
| L4 | Low | Fixed | Configured TLS 1.2+ only |
| L5 | Low | Fixed | Configured strong cipher suites |

## Impact on Ark

All Ark services are now hardened with comprehensive security controls:
- Web services protected against clickjacking and XSS attacks
- Containers run with minimal privileges and security contexts
- RBAC roles follow principle of least privilege
- TLS configuration enforces modern protocols and strong ciphers

## Changes Made

### M1 & L3: Security Headers (Clickjacking Protection)

Added comprehensive security headers to all Ingress configurations:
- X-Frame-Options: DENY
- Content-Security-Policy: frame-ancestors 'none'
- X-Content-Type-Options: nosniff
- X-XSS-Protection: 1; mode=block
- Strict-Transport-Security: max-age=31536000; includeSubDomains
- Referrer-Policy: strict-origin-when-cross-origin

**Files Modified:**
- services/ark-api/chart/values.yaml
- services/ark-dashboard/chart/values.yaml
- services/ark-mcp/chart/values.yaml

### L1: Restricted RBAC Roles

Removed cluster-wide delete permissions from ark-deployer ClusterRole.
The role can now create, update, and patch resources for deployment,
but cannot delete resources cluster-wide. This prevents accidental or
malicious deletion of critical resources.

**Files Modified:**
- ark/dist/chart/templates/rbac/ark-deployer-role.yaml

**Breaking Changes:**
- CI/CD pipelines that rely on ark-deployer role for deletion must
  create namespace-scoped roles for cleanup operations

### L2: Conta

--- a/services/ark-api/chart/templates/deployment.yaml
+++ b/services/ark-api/chart/templates/deployment.yaml
@@ -22,10 +22,18 @@ spec:
         {{- end }}
     spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
+      {{- if .Values.app.podSecurityContext }}
+      securityContext:
+        {{- toYaml .Values.app.podSecurityContext | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Values.app.name }}
           image: "{{ .Values.app.image.repository }}:{{ .Values.app.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.app.image.pullPolicy }}
+          {{- if .Values.app.securityContext }}
+          securityContext:
+            {{- toYaml .Values.app.securityContext | nindent 12 }}
+          {{- end }}
           ports:
             - containerPort: {{ .Values.service.targetPort }}
           {{- if .Values.app.env }}
