--- a/services/localhost-gateway/chart/templates/gateway.yaml
+++ b/services/localhost-gateway/chart/templates/gateway.yaml
@@ -28,3 +28,37 @@ spec:
     allowedRoutes:
       namespaces:
         from: All  # Allow HTTPRoutes from any namespace
+  # L4 & L5 FIX: Add HTTPS listeners with TLS 1.2+ and strong ciphers
+  # Note: Uncomment when TLS certificates are configured
+  # - name: https-wildcard
+  #   port: 443
+  #   protocol: HTTPS
+  #   hostname: "*.127.0.0.1.nip.io"
+  #   tls:
+  #     mode: Terminate
+  #     certificateRefs:
+  #       - name: localhost-gateway-tls
+  #     options:
+  #       # L4 & L5 FIX: Enforce TLS 1.2 and 1.3 only with strong cipher suites
+  #       nginx.org/ssl-protocols: "TLSv1.2 TLSv1.3"
+  #       nginx.org/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
+  #       nginx.org/ssl-prefer-server-ciphers: "on"
+  #   allowedRoutes:
+  #     namespaces:
+  #       from: All
+  # - name: https-root
+  #   port: 443
+  #   protocol: HTTPS
+  #   hostname: "127.0.0.1.nip.io"
+  #   tls:
+  #     mode: Terminate
+  #     certificateRefs:
+  #       - name: localhost-gateway-tls
+  #     options:
+  #       # L4 & L5 FIX: Enforce TLS 1.2 and 1.3 only with strong cipher suites
+  #       nginx.org/ssl-protocols: "TLSv1.2 TLSv1.3"
+  #       nginx.org/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
+  #       nginx.org/ssl-prefer-server-ciphers: "on"
+  #   allowedRoutes:
+  #     namespaces:
+  #       from: All
