--- a/services/ark-cluster-memory/chart/values.yaml
+++ b/services/ark-cluster-memory/chart/values.yaml
@@ -72,9 +72,21 @@ serviceAccount:
   create: true
   name: ""
 
-podSecurityContext: {}
+# L2 FIX: Pod security context for hardening
+podSecurityContext:
+  runAsNonRoot: true
+  runAsUser: 1000
+  fsGroup: 1000
+  seccompProfile:
+    type: RuntimeDefault
 
-securityContext: {}
+# L2 FIX: Container security context for hardening
+securityContext:
+  allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: false
+  capabilities:
+    drop:
+      - ALL
 
 nodeSelector: {}
 
